[package]
name = "png-viewer"
version = "0.1.0"
edition = "2021"
default-run = "png-viewer"

[dependencies]
iced = { version = "0.10.0", features = ["canvas", "image", "tokio"] }
native-dialog = "0.7.0"
nom = "7.1.3"
rand = "0.8.5"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["sync", "fs", "rt"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
winres = "0.1"
